# rush-yale

./: .gitignore  README.md  rush-yale-api.json  rush-yale-schema.sql
backend/: .env.example  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: handlers.rs  lib.rs
backend/entity/: Cargo.toml
backend/entity/src/: event.rs  event_invitee.rs  event_organization.rs  thread.rs  thread_reader.rs  thread_writer.rs  user.rs  user_status.rs  user_status_option.rs
backend/service/: Cargo.toml
backend/src/: errors.rs  handlers.rs  main.rs  tls.rs
backend/src/controllers/: event.rs  mod.rs  organization.rs  thread.rs  user.rs
backend/src/models/: event.rs  event_invitee.rs  event_organization.rs  mod.rs  organization.rs  prelude.rs  thread.rs  thread_message.rs  thread_reader.rs  user.rs  user_status.rs
backend/src/routes/: auth.rs  event.rs  mod.rs  organization.rs  thread.rs  user.rs
backend/src/service/: event_query.rs  mod.rs  organization_query.rs
