[package]
name = "rush-yale-backend"
version = "0.1.0"
edition = "2021"
authors = ["Simon Van Der Weide <smvanderweide17@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "entity"]

[dependencies]
rust-yale-api = { path = "api" }
