[package]
name = "rush-yale-backend"
version = "0.1.0"
edition = "2021"
authors = ["Simon Van Der Weide <smvanderweide17@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.6.0"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
dotenvy = "0.15.7"
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
sea-orm = { version = "0.12.8", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.29"
