[package]
name = "rust-yale-api"
version = "0.1.0"
edition = "2021"
authors = ["Simon Van Der Weide <smvanderweide17@gmail.com>"]
publish = false

[dependencies]
rush-yale-service = { path = "../service" }
actix-identity = "0.6.0"
actix-web = { version = "4.4.0", features = ["rustls-0_21"] }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
rustls = "0.21.9"
rustls-pemfile = "1.0.4"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
